map test to do, gnl fix

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: umosse <umosse@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/07 14:10:44 by umosse            #+#    #+#              #
-#    Updated: 2024/04/09 17:37:39 by umosse           ###   ########.fr        #
+#    Updated: 2024/11/25 16:57:32 by aroualid         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
